Change my description content, Website will serve image my thumbnail image. Added Metadata to html.index

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/luke.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luke Garnsey</title>
+    <meta name="description" content="Luke Garnsey is a Full Stack software engineer who builds interactive applications.">
+    <meta name="image" content="https://lukegarnsey.com/lg.png">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Luke Garnsey">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Luke Garnsey">
+    <meta property="og:description" content="Luke Garnsey is a Full Stack software engineer who builds interactive applications.">
+    <meta property="og:url" content="https://lukegarnsey.com/">
+    <meta property="og:image" content="https://lukegarnsey.com/lg.png">
   </head>
   <body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
     <div id="root"></div>
