--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luke Garnsey</title>
     <meta name="description" content="Luke Garnsey is a Full Stack software engineer who builds interactive applications.">
-    <meta name="image" content="https://lukegarnsey.com/lg.png">
+    <meta name="image" content="https://www.lukegarnsey.com/lg.png">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Luke Garnsey">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Luke Garnsey">
     <meta property="og:description" content="Luke Garnsey is a Full Stack software engineer who builds interactive applications.">
-    <meta property="og:url" content="https://lukegarnsey.com/">
-    <meta property="og:image" content="https://lukegarnsey.com/lg.png">
+    <meta property="og:url" content="https://www.lukegarnsey.com/">
+    <meta property="og:image" content="https://www.lukegarnsey.com/lg.png">
   </head>
   <body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
     <div id="root"></div>
