Added twitter meta data

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,12 @@
     <meta property="og:description" content="Luke Garnsey is a Full Stack software engineer who builds interactive applications.">
     <meta property="og:url" content="https://www.lukegarnsey.com/">
     <meta property="og:image" content="https://www.lukegarnsey.com/lg.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Luke Garnsey">
+    <meta property="twitter:description" content="Luke Garnsey is a Full Stack software engineer who builds interactive applications.">
+    <meta property="twitter:url" content="https://www.lukegarnsey.com/">
+    <meta property="twitter:image" content="https://www.lukegarnsey.com/lg.png">
   </head>
   <body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
     <div id="root"></div>
