pallet changes stash

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
     <meta property="twitter:url" content="https://www.lukegarnsey.com/">
     <meta property="twitter:image" content="https://www.lukegarnsey.com/lg.png">
   </head>
-  <body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
+  <body class="bg-juni-600 leading-relaxed text-juni-100 antialiased selection:bg-juni-300 selection:text-juni-500">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
